right path fixed

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <p></p>
-    <script src="../js/index.js" type="module"></script>
+    <script src="/src/js/index.js" type="module"></script>
     
     
   </body>
