onFormSubmit function added

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,16 @@
     </head>
   <body>
 
-    <p>something</p>
+    <form class="search-form" id="search-form">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button type="submit">Search</button>
+    </form>
+
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
+
+    <!-- <script src="/dist/notiflix-aio-3.2.6.min.js"></script> -->
     <script src="/src/js/index.js" type="module"></script>
     
     
