--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <form class="search-form" id="search-form">
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit">Search</button>
+      <button type="button" class="load-more">Load more</button>
     </form>
 
     <div class="gallery">
