--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,9 @@
       <!-- Картки зображень -->
     </div>
 
-    <!-- <script src="/dist/notiflix-aio-3.2.6.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.13.0/simple-lightbox.min.js"
+      integrity="sha512-va85zLd+1szc8k3CyJ26pBSluqH+c3H+SOf4cBWhpHFU3ZI331gE6nqLUIm0kd1e0HcZq5YYwdHuSed8IhACAA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/src/js/index.js" type="module"></script>
     
     
