styles fixed, load button fixed

--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,23 @@
     <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit">Search</button>
-      <button type="button" class="load-more">Load more</button>
-    </form>
-
-    <div class="gallery">
-      <!-- Картки зображень -->
+    <div class="wrapper">
+      <div class="container-form">
+        <form class="search-form" id="search-form">
+          <input
+            type="text"
+            name="searchQuery"
+            autocomplete="off"
+            placeholder="Search images..."
+          />
+          <button type="submit">Search</button>
+        </form>
+      </div>
+      <div class="gallery">
+        <!-- Картки зображень -->
+      </div>
     </div>
+    <button type="button" class="load-more">Load more</button>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.13.0/simple-lightbox.min.js"
